--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "garet-book";
+  src: url("./assets/fonts/Garet-Book.ttf");
+}
+
+@font-face {
+  font-family: "garet-heavy";
+  src: url("./assets/fonts/Garet-Heavy.ttf");
+}
