feat: started on CreateProject.jsx
- added Title field and Status dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   --primary-color: #515d59;
   --secondary-color: #697973;
   --background-color: #373d3b;
+  --brighter-bg-color: #434a46;
   --tertiary-color: #697973;
+  --field-border-color: #d2dee2;
   --text-color: #ffffff;
   --sub-text-color: #f1dfb6;
   --in-progress-color: #ef601e;
