--- a/src/components/Sidebars/LeftSideBar.css
+++ b/src/components/Sidebars/LeftSideBar.css
@@ -1,30 +1,35 @@
-.right-sidebar {
-  position: fixed;
-  right: 8.7rem;
+.left-sidebar {
+  position: sticky;
+  top: 5rem;
   background: var(--primary-color);
   border-radius: 10px;
   font-size: 20px;
-  height: 40%;
+  height: 35%;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 1.5rem 2rem;
-  width: 18%;
+  width: 100%;
+  max-width: 20%;
+  font-weight: bold;
 }
 
-.right-sidebar button {
+.left-sidebar button {
   color: var(--sub-text-color);
   text-align: left;
   font-size: 20px;
   background: var(--tertiary-color);
   padding: 0.5rem;
   border: none;
-  padding-bottom: 3rem;
-  align-items: flex-start;
-  border-radius: 20px;
+  border-radius: 50px;
 }
 
-.right-sidebar button:hover {
+.left-sidebar #icon {
+  margin: 0px 10px;
+  font-size: 18px;
+}
+
+.left-sidebar button:hover {
   transition: background-color 250ms;
   background: var(--background-color);
 }
