--- a/src/components/Sidebars/RightSideBar.css
+++ b/src/components/Sidebars/RightSideBar.css
@@ -1,29 +1,29 @@
-.left-sidebar {
+.right-sidebar {
   position: sticky;
   top: 5.3rem;
   background: var(--primary-color);
   border-radius: 10px;
   font-size: 20px;
-  height: 35%;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 1.5rem 2rem;
-  width: 23%;
-  min-width: 13%;
+  width: 100%;
 }
 
-.left-sidebar button {
+.right-sidebar button {
   color: var(--sub-text-color);
   text-align: left;
   font-size: 20px;
   background: var(--tertiary-color);
   padding: 0.5rem;
   border: none;
-  border-radius: 50px;
+  padding-bottom: 3rem;
+  align-items: flex-start;
+  border-radius: 20px;
 }
 
-.left-sidebar button:hover {
+.right-sidebar button:hover {
   transition: background-color 250ms;
   background: var(--background-color);
 }
