--- a/main.css
+++ b/main.css
@@ -28,57 +28,242 @@ header {
     justify-content: space-between;
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 1100;
 }
 
 header .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    cursor: pointer;
 }
 
 header .search-bar {
     padding: 0.2em;
     border-radius: 5px;
     background-color: var(--primary-color);
-    border: solid;
+    border: none;
     color: var(--text-color);
-    border-color: var(--background-color);
-    width: 30%;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
 }
 
 header .search-bar input[type=text] {
-    border: none;
-    font-size: 14px;
-    width: 85%;
-    background-color: var(--primary-color);
     color: var(--text-color);
-    float: left;
-    margin-top: 0.3em;
-    margin-left: 0.3em;
+    font-size: 16px;
+    background: none;
+    border: none;
+    padding: 0.5em;
+    width: 100%;
+    outline: none;
 }
 
 header .search-bar button {
     color: var(--background-color);
-    text-align: left;
     font-size: 20px;
     background: none;
     border: none;
     border-radius: 10px;
-    float: right;
+    margin-left: 0.5em;
+    cursor: pointer;
 }
+
 
 header nav {
     display: flex;
-    gap: 15px;
+    gap: 40px;
 }
 
 header nav a {
-    color: white;
+    color: var(--sub-text-color);
     text-decoration: none;
 }
 
 header nav a:hover {
     text-decoration: underline;
+}
+
+header .actions {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background: none;
+}
+
+header .actions button {
+    background: none;
+    border: none;
+    color: var(--sub-text-color);
+    font-size: 17;
+}
+
+header .actions .notification {
+    position: relative;
+}
+
+header .actions .notification .dot {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: var(--sub-text-color);
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+}
+
+.notification-panel {
+    display: none;
+    position: absolute;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    padding: 1em;
+    border-radius: 5px;
+    top: 40px;
+    right: 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    width: 300px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.notification-panel.show {
+    display: block;
+}
+
+.notification-post {
+    display: flex;
+    align-items: center;
+    background: var(--secondary-color);
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.notification-post img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.notification-post .meta {
+    display: flex;
+    flex-direction: column;
+    gap: 3px
+}
+
+.notification-post .meta a {
+    color: var(--sub-text-color);
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.notification-post .meta .details {
+    color: var(--text-color);
+    font-size: 14px;
+}
+.notification-post .meta .timestamp {
+    color: var(--sub-text-color);
+    font-size: 10px;
+}
+
+header .actions .notification button {
+    position: relative;
+}
+
+header .actions .notification button:focus + .notification-panel {
+    display: block;
+}
+
+header .account {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+header .account img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+
+header .account .greeting {
+    color: var(--sub-text-color);
+}
+
+.account-panel {
+    display: none;
+    position: absolute;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    padding: 1em;
+    border-radius: 10px;
+    top: 70px;
+    right: 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    width: 250px;
+}
+
+.account-panel.show {
+    display: block;
+}
+
+.account-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.account-info img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.account-info .details {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.account-info .nickname {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.account-info .username {
+    font-size: 12px;
+    color: var(--sub-text-color);
+}
+
+.account-options {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.account-options li {
+    margin: 10px 0;
+}
+
+.account-options a {
+    color: var(--text-color);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.account-options a:hover {
+    color: var(--sub-text-color);
+}
+
+hr {
+    border: 1px solid var(--secondary-color);
 }
 
 main {
@@ -101,6 +286,7 @@ main {
     flex-direction: column;
     gap: 10px;
     padding: 1.5rem 2rem;
+    max-width: 20%;
 }
 
 .left-sidebar {
@@ -111,13 +297,22 @@ main {
     width: 20%;
 }
 
-.left-sidebar button, .right-sidebar button {
+.left-sidebar button, .right-sidebar button, .left-sidebar-panel button, .right-sidebar-panel button {
     color: var(--sub-text-color);
     text-align: left;
-    font-size: 20px;
-    background: var(--tertiary-color);
-    padding: 0.5rem;
+    font-size: 18px;
+    background: var(--secondary-color);
+    padding: 1rem;
     border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    transition: background 0.1s;
+}
+
+.left-sidebar button:hover, .right-sidebar button:hover {
+    background: var(--background-color);
 }
 
 .left-sidebar button {
@@ -130,19 +325,162 @@ main {
     border-radius: 20px;
 }
 
+.right-sidebar button i {
+    font-size: 24px;
+    opacity: 0.8;
+}
 
-.left-sidebar button:hover, .right-sidebar button:hover {
+/* Overlay for dimming the page */
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.overlay.active {
+    display: block;
+}
+
+/* Sidebar Toggle Button */
+.left-sidebar-toggle {
+    display: none;
+    color: var(--sub-text-color);
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* Left and Right panels */
+.left-sidebar-panel, .right-sidebar-panel {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 60px;
+    width: 300px;
+    height: 100%;
+    background: var(--primary-color);
+    color: var(--text-color);
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    z-index: 1000;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.left-sidebar-panel {
+    left: 0;
+    transform: translateX(-100%);
+}
+
+.left-sidebar-panel.show {
+    transform: translateX(0);
+}
+
+.right-sidebar-panel {
+    right: 0;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.right-sidebar-panel.show {
+    display: block;
+    transform: translateX(0);
+}
+
+.left-sidebar-buttons, .right-sidebar-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+.left-sidebar-buttons button, .right-sidebar-buttons button {
+    color: var(--sub-text-color);
+    font-size: 18px;
+    background: var(--secondary-color);
+    padding: 1rem;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    text-align: left;
+    transition: background 0.1s;
+}
+
+.left-sidebar-buttons button:hover, .right-sidebar-buttons button:hover {
     background: var(--background-color);
 }
 
+.right-sidebar-buttons button i, .left-sidebar-buttons button i {
+    font-size: 24px;
+    opacity: 0.8;
+}
+
+.right-sidebar-panel .account-info {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 10px;
+}
+
+.right-sidebar-panel .account-info img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.right-sidebar-panel .account-info .details {
+    display: flex;
+    flex-direction: column;
+}
+
+.right-sidebar-panel .account-info .nickname {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.right-sidebar-panel .account-info .username {
+    font-size: 14px;
+    color: var(--sub-text-color);
+}
+
+.right-sidebar-panel .account-options {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.right-sidebar-panel .account-options a {
+    color: var(--text-color);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+}
+
+.right-sidebar-panel .account-options a:hover {
+    color: var(--sub-text-color);
+}
+
 .content {
-    /* background: var(--primary-color); */
+    background: var(--primary-color);
+    border-radius: 0.5rem;
     flex: 1;
-    padding: 0 2rem;
+    padding: 2rem;
 }
 
 .post {
-    background: var(--primary-color);
+    background: var(--secondary-color);
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 0.8rem;
@@ -181,21 +519,103 @@ main {
     flex: 2;
 }
 
-.deadline-bar {
-    height: 10px;
-    border-radius: 5px;
-    overflow: hidden;
-    background: var(--background-color);
-    margin-bottom: 10px;
-    flex: 1;
+.post-content {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
 }
 
-/* this is currently hardcoded */
+.post-body {
+    flex: 3;
+    font-size: 1rem;
+    color: var(--text-color);
+}
+
+.post-images {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    cursor: pointer;
+    position: relative;
+    max-width: 120px;
+}
+
+.post-images img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: absolute;
+}
+
+/* Stacked Images */
+.post-images .stacked-image-0 {
+    opacity: 0.6;
+    left: 5px;
+    z-index: 1;
+}
+
+.post-images .stacked-image-1 {
+    opacity: 0.8;
+    z-index: 2;
+}
+
+.post-images .main-image {
+    z-index: 3;
+    left: -5px;
+}
+
+/* Ellipsis */
+.post-images .ellipsis {
+    position: absolute;
+    top: 90px;
+    right: 0;
+    color: var(--text-color);
+    padding: 5px 10px;
+    border-radius: 50%;
+    font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.deadline-bar-container {
+    position: relative;
+    width: 40%;
+}
+
+.deadline-text {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--sub-text-color);
+    font-size: 10px;
+    font-weight: bold;
+    white-space: nowrap;
+    z-index: 2;
+}
+
+.deadline-bar {
+    position: relative;
+    height: 20px;
+    border-radius: 10px;
+    background: var(--primary-color);
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .deadline-bar .progress {
     height: 100%;
-    width: 50%; /* Dynamically update this value */
-    background: var(--sub-text-color);
-    border-radius: 5px;
+    background: var(--background-color);
+    transition: width 0.3s ease;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .post-tags {
@@ -221,33 +641,29 @@ main {
 }
 
 .post-actions {
-    flex: 2;
     display: flex;
-    padding-right: 18em;
-    justify-content: space-between;
-    align-items: center;
+    gap: 15px;
 }
 
 .post-actions button {
-    background: var(--secondary-color);
-    border-radius: 10px;
+    background: var(--primary-color);
     border: none;
     cursor: pointer;
     font-size: 1rem;
     color: var(--sub-text-color);
-    padding: 0.2em, 0.3em;
+    padding: 0.3rem 0.6rem;
+    border-radius: 10px;
     display: flex;
     align-items: center;
+    gap: 5px;
+}
+
+.post-actions button i {
+    font-size: 14px;
 }
 
 .post-actions button:hover {
-    color: var(--primary-color);
-}
-
-.post-actions .votes {
-    display: flex;
-    gap: 5px;
-    align-items: center;
+    color: var(--secondary-color);
 }
 
 .post-actions .votes {
@@ -263,34 +679,52 @@ footer {
     padding: 10px;
 }
 
-/* width */
 ::-webkit-scrollbar {
     width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     opacity: 0;
     border-radius: 10px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: var(--primary-color);
     border-radius: 10px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: var(--background-color);
 }
 
-@media (max-width: 768px) {
-    .left-sidebar, .right-sidebar {
+@media (max-width: 1100px) {
+    .left-sidebar {
         display: none;
     }
 
-    main {
-        flex-direction: column;
+    .left-sidebar-toggle {
+        display: block;
+    }
+}
+
+@media (max-width: 950px) {
+    .about {
+        display: none;
+    }
+}
+
+@media (max-width: 850px) {
+    .right-sidebar {
+        display: none;
+    }
+
+    .account-panel .account-options, .right-sidebar-buttons {
+        gap: 15px;
+    }
+}
+
+@media (max-width: 700px) {
+    .search-bar button {
+        display: none;
     }
 }
