--- a/src/components/ProfilePage/ProfileHeader.css
+++ b/src/components/ProfilePage/ProfileHeader.css
@@ -16,6 +16,14 @@
     height: 125px;
 	margin-left: 10px;
 }
+.picture-border{
+	flex: 1;
+	border-color: var(--background-color);
+	border-radius: 30px;
+	border-top: 10px;
+	width: 125px;
+    height: 125px;
+}
 
 .info-container {
 	display: flex;
@@ -37,12 +45,7 @@
 	font-size: 15px;
 }
 
-.picture-border{
-	flex: 1;
-	border-color: var(--primary-color);
-	border-radius: 5px;
-	border-top: 10px;
-}
+
 .user-info{
 	flex-direction: column;
 	margin-top: 40px;
@@ -53,19 +56,46 @@
 .headerOptions{
 	margin-top: 50px;
 	size: 3px;
+	display: flex;
+	gap: 3px;
 }
 
 .headerOptions button{
+	margin: 0px 1px;
 	padding: 1px;
+	height: 20%;
 	background-color: var(--primary-color);
-	border-radius: 10px;
+	border-radius: 15px;
 	border-spacing: .5px;	
 	
+}
+.headerOptions button:hover{
+	transition: background-color 250ms;
+	background: var(--secondary-color);
+	
+}
+
+.profileContentButtons{
+	display: flex;
+	gap: 5px;
 }
 
 .profileContentButtons button{
 	padding: 5px;
-	background-color: var(--secondary-color);
-	border-radius: 10px;
+	background-color: var(--background-color);
+	border-color: var(--background-color);
+	color: var(--text-color);
+	border-radius: 50px;
 	border-spacing: 10px;
+	border-width: 3px;
+}
+
+.profileContentButtons button:hover{
+	transition: background-color 250ms;
+	background: var(--primary-color);
+}
+
+.profileContentButtons button.active {
+	transition: background-color 250ms;
+	background-color: var(--primary-color);
 }
