added comment section

--- a/andrei's part/main.css
+++ b/andrei's part/main.css
@@ -657,7 +657,7 @@ main {
 }
 
 .post-actions-buttons button {
-  background: #697973;
+  background: #373d3b;
   border: none;
   cursor: pointer;
   font-size: 1rem;
