--- a/andrei's part/styles.css
+++ b/andrei's part/styles.css
@@ -13,7 +13,6 @@ body {
 }
 
 .post-profile-container {
-  border: 0px solid goldenrod;
   width: 570px;
   height: 50px;
   border-radius: 10px;
@@ -21,8 +20,8 @@ body {
   margin-bottom: 10px;
 
   display: flex;
-  justify-content: space-between; /* This will space out the children */
-  align-items: center; /* This will vertically align the children */
+  justify-content: space-between;
+  align-items: center;
 }
 
 .post-profile-container #post-container-image {
@@ -93,17 +92,39 @@ body {
   font-family: "Dekko", Arial;
 }
 
-/*
-.post-image-container {
-  height: 200px;
-  width: 200px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-  */
-
 #carouselExample {
-  margin: 0 auto;
   display: flex;
   justify-content: center;
+  margin-bottom: 4px;
+}
+
+.post-comment-section {
+  margin-top: 15px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+#commenter-image-container {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  float: left;
+}
+
+.post-commenter-profile {
+  display: flex;
+  align-items: center;
+}
+
+#post-user-hours {
+  margin-left: 10px;
+}
+
+#commenter-comment-container {
+  color: #ffffff;
+  margin-left: 40px;
+}
+
+#commenter-action-buttons {
+  margin-left: 40px;
 }
