--- a/src/components/Home/Post.css
+++ b/src/components/Home/Post.css
@@ -1,12 +1,204 @@
 .post {
-  background: var(--primary-color);
+  background: var(--secondary-color);
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 0.8rem;
   padding: 20px;
-  max-width: 650px;
+}
+
+.post-meta {
+  font-size: 0.9rem;
+  display: flex;
+  flex-direction: row;
+  color: var(--sub-text-color);
+  align-items: flex-start;
+}
+
+.post-meta img {
+  border-radius: 100%;
+  width: 1.5em;
+  margin-right: 0.5rem;
+}
+
+.post-meta a {
+  color: var(--sub-text-color);
+  text-decoration: none;
+  justify-content: flex-end;
+  margin-right: 0.4rem;
+}
+
+.post-header {
+  display: flex;
+  margin-top: 0.2rem;
+}
+
+.post-title {
+  font-size: 1.2rem;
+  margin-bottom: 1vh;
+  flex: 2;
+}
+
+.post-content {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.post-body {
+  flex: 3;
+  font-size: 1rem;
+  color: var(--text-color);
+}
+
+.post-images {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  cursor: pointer;
+  position: relative;
+  max-width: 120px;
+}
+
+.post-images img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  position: absolute;
+}
+
+/* Stacked Images */
+.post-images .stacked-image-0 {
+  opacity: 0.6;
+  left: 5px;
+  z-index: 1;
+}
+
+.post-images .stacked-image-1 {
+  opacity: 0.8;
+  z-index: 2;
+}
+
+.post-images .main-image {
+  z-index: 3;
+  left: -5px;
+}
+
+/* Ellipsis */
+.post-images .ellipsis {
+  position: absolute;
+  top: 90px;
+  right: 0;
+  color: var(--text-color);
+  padding: 5px 10px;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deadline-bar-container {
+  position: relative;
+  width: 40%;
+}
+
+.deadline-text {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--sub-text-color);
+  font-size: 10px;
+  font-weight: bold;
+  white-space: nowrap;
+  z-index: 2;
+}
+
+.deadline-bar {
+  position: relative;
+  height: 20px;
+  border-radius: 10px;
+  background: var(--primary-color);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deadline-bar .progress {
+  height: 100%;
+  background: var(--background-color);
+  transition: width 0.3s ease;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.post-tags {
+  padding-right: 0.5rem;
+  border-radius: 10px;
+}
+
+.post-tags span {
+  box-shadow: 0 2px 5px var(--primary-color);
+  text-align: center;
+  font-size: 14px;
+  border-radius: 10px;
+  padding: 0 0.8rem;
+  margin-right: 0.2rem;
+}
+
+.in-progress-tag {
+  background: var(--in-progress-color);
+}
+
+.post-body {
+  margin: 1rem 0;
+}
+
+.post-actions {
+  display: flex;
+  gap: 15px;
+}
+
+.post-actions button {
+  background: var(--primary-color);
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: var(--sub-text-color);
+  padding: 0.3rem 0.6rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.post-actions button i {
+  font-size: 14px;
+}
+
+.post-actions button:hover {
+  color: var(--secondary-color);
+}
+
+.post-actions .votes {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+/* .post {
+  background: var(--secondary-color);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 0.8rem;
+  padding: 20px;
+  max-width: 600px;
   width: 100%;
-  margin: 10 auto;
   box-sizing: border-box;
 }
 
@@ -52,17 +244,43 @@
   min-width: 0;
 }
 
-.deadline-bar {
-  height: 10px;
-  border-radius: 5px;
-  overflow: hidden;
-  background: var(--background-color);
-  margin-bottom: 10px;
-  flex: 1;
-  min-width: 50px;
+.deadline-bar-container {
+  position: relative;
+  width: 40%;
 }
 
-/* this is currently hardcoded */
+.deadline-text {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--sub-text-color);
+  font-size: 10px;
+  font-weight: bold;
+  white-space: nowrap;
+  z-index: 2;
+}
+
+.deadline-bar {
+  position: relative;
+  height: 20px;
+  border-radius: 10px;
+  background: var(--primary-color);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deadline-bar .progress {
+  height: 100%;
+  background: var(--background-color);
+  transition: width 0.3s ease;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .deadline-bar .progress {
   height: 100%;
   width: 50%;
@@ -107,15 +325,15 @@
   padding-right: 8em;
   align-items: center;
   justify-content: flex-start;
-  gap: 0.4rem;
+  gap: 12px;
 }
 
 .post-actions button {
-  background: var(--secondary-color);
+  background: var(--primary-color);
   border-radius: 10px;
   border: none;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: var(--sub-text-color);
   padding: 3px;
   display: flex;
@@ -136,4 +354,4 @@
   display: flex;
   gap: 5px;
   align-items: center;
-}
+} */
