--- a/src/components/Sidebars/LeftSideBar.css
+++ b/src/components/Sidebars/LeftSideBar.css
@@ -17,6 +17,7 @@
 .left-sidebar button {
   color: var(--sub-text-color);
   text-align: left;
+  width: 100%;
   font-size: 20px;
   background: var(--tertiary-color);
   padding: 0.5rem;
