--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
-header .logo {
-  font-size: 1.5rem;
+.logo {
+  font-family: "room-handmade", sans-serif;
+  font-size: 2rem;
   font-weight: bold;
 }
