--- a/src/components/Header/SearchBar.css
+++ b/src/components/Header/SearchBar.css
@@ -6,6 +6,7 @@
   color: var(--text-color);
   border-color: var(--background-color);
   width: 30%;
+  font-family: "Garet-Book";
 }
 
 .search-bar input[type="text"] {
