--- a/src/components/Landing/page.css
+++ b/src/components/Landing/page.css
@@ -9,7 +9,7 @@
     --warning-color: #FFC107;
 }
 
-body {
+.body-landing {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
