--- a/src/components/Sidebars/LeftSideBar.css
+++ b/src/components/Sidebars/LeftSideBar.css
@@ -12,6 +12,7 @@
   width: 100%;
   max-width: 20%;
   font-weight: bold;
+  font-family: "Garet-Book";
 }
 
 .left-sidebar button {
@@ -22,12 +23,14 @@
   background: var(--tertiary-color);
   padding: 0.5rem;
   border: none;
+  font-family: "Garet-Book";
   border-radius: 50px;
 }
 
 .left-sidebar #icon {
   margin: 0px 10px;
   font-size: 18px;
+  font-family: "Garet-Book";
 }
 
 .left-sidebar button:hover {
