--- a/src/components/Sidebars/RightSideBar.css
+++ b/src/components/Sidebars/RightSideBar.css
@@ -4,6 +4,7 @@
   background: var(--primary-color);
   border-radius: 10px;
   font-size: 20px;
+  font-family: "Garet-Book";
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -15,6 +16,7 @@
   color: var(--sub-text-color);
   text-align: left;
   font-size: 20px;
+  font-family: "Garet-Book";
   background: var(--tertiary-color);
   padding: 0.5rem;
   border: none;
