fixed filter button

--- a/src/components/ProfilePage/ProfileContent.css
+++ b/src/components/ProfilePage/ProfileContent.css
@@ -1,8 +1,8 @@
 
 .profileContentProper{
-	background-color: var(--brighter-bg-color);
+	background-color: #515d59;
 	border-radius: 20px;
-	border-width: 100%;
+	margin-top: 10px;
 }
 
 .profileContentButtons{
@@ -30,19 +30,25 @@
 	background-color: var(--primary-color);
 }
 
-.postFilter{
+.postFilter button{
 	background-color: var(--secondary-color);
 	border-radius: 20px;
+	border-color: #515d59;
+	border-width: 3px;
 	padding: 5px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	height: 2rem;
+	margin: 10px;
+	margin-right: 1rem;
+	height: 2.5rem;
+	width: 97.5%;
+	text-align: left;
 }
 
 .postFilter button:hover{
 	transition: background-color 250ms;
 	background: var(--primary-color);
 	border-radius: 20px;
+	border-color: var(--secondary-color);
+	border-width: 3px;
 }
 
 .project-list{
