I DON'T KNOW WHAT I DID BUT IT GOT BETTERRR

--- a/src/components/Header/Actions.css
+++ b/src/components/Header/Actions.css
@@ -107,6 +107,10 @@ header .account .greeting {
   color: var(--sub-text-color);
 }
 
+header .account .greeting:hover {
+  color: var(--darker-sub-text-color);
+}
+
 .account-panel {
   display: none;
   position: absolute;
