--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   --tertiary-color: #697973;
   --field-border-color: #d2dee2;
   --text-color: #ffffff;
+  --darker-text-color: #d4d4d4;
   --sub-text-color: #f1dfb6;
+  --darker-sub-text-color: #c3b594;
   --in-progress-color: #ef601e;
   --started-color: #24a3bd;
   --finished-color: #17a021;
