feat: added profile dropdown and sign out
fix: final fixes

--- a/src/components/ViewPost/styles.css
+++ b/src/components/ViewPost/styles.css
@@ -14,7 +14,9 @@
   font-size: 13px;
   display: flex;
   align-items: center;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
 #message-button {
@@ -41,7 +43,9 @@
   width: 570px;
   padding: 12px;
   border-radius: 10px;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
   margin-bottom: 10px;
 }
 
@@ -57,6 +61,7 @@
 #title {
   font-weight: bold;
   font-size: 23px;
+  width: 300px;
   color: #f1dfb6;
 }
 
