--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 footer {
-  background: var(--background-color);
   color: white;
   text-align: center;
   padding: 10px;
+  font-family: "Garet-Book";
 }
