--- a/src/components/Home/Post.css
+++ b/src/components/Home/Post.css
@@ -3,6 +3,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 0.8rem;
+  min-width: 300px;
   padding: 20px;
 }
 
