--- a/src/components/Home/Content.css
+++ b/src/components/Home/Content.css
@@ -1,5 +1,5 @@
 .content {
-  background-color: #515d59;
+  background-color: var(--primary-color);
   position: sticky;
   border-radius: 10px;
   padding: 2rem;
