--- a/src/components/Home/Post.css
+++ b/src/components/Home/Post.css
@@ -59,7 +59,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   position: relative;
   max-width: 120px;
