--- a/src/components/ViewPost/ImageContainer.css
+++ b/src/components/ViewPost/ImageContainer.css
@@ -41,10 +41,10 @@
 }
 
 .image {
-  height: 290px;
-  width: 450px;
+  height: auto;
+  width: auto;
   object-fit: cover;
-  margin-left: 8px;
+  /*margin-left: 3px;*/
   margin-right: 8px;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
