--- a/src/components/ViewPost/PostActions.css
+++ b/src/components/ViewPost/PostActions.css
@@ -22,8 +22,8 @@
 .post-add-comment {
   background-color: #373d3b;
   height: 30px;
+  width: 530px;
   border-radius: 15px;
-  padding-top: 5px;
   padding-left: 12px;
   color: #697973;
   margin-left: 8px;
