--- a/src/components/ViewPost/Comments.css
+++ b/src/components/ViewPost/Comments.css
@@ -1,5 +1,6 @@
 .post-commenter-profile {
   display: flex;
+  justify-content: space-between;
   font-size: 15px;
   align-items: center;
   color: #f1dfb6;
@@ -10,11 +11,10 @@
   height: 30px;
   border-radius: 50%;
   float: left;
-  margin-right: 5px;
 }
 
 #commenter-comment-container {
   color: #ffffff;
-  margin-left: 36px;
+  margin-left: 42px;
   font-size: small;
 }
